--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
+		"@types/leaflet": "^1.7.3",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.6",
@@ -33,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@mdi/js": "^5.9.55"
+		"@mdi/js": "^5.9.55",
+		"leaflet": "^1.7.1"
 	}
 }
